<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>provant_simulator_step_command_bridge</name>
  <version>0.1.0</version>
  <description>
    ROS 2 node that bridges /provant_simulator/step to Gazebo Harmonic world control.
  </description>

  <maintainer email="junioeduardo.morais@ieee.org">Júnio Eduardo de Morais Aquino</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>gz_transport_vendor</depend>
  <depend>gz_msgs_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>