<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>provant_temporal_loop_tests</name>
  <version>0.1.0</version>
  <description>
    End-to-end temporal loop integration tests for simulation_manager, step_command_bridge and step_manager_system.
  </description>

  <maintainer email="junioeduardo.morais@ieee.org">Júnio Eduardo de Morais Aquino</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>provant_simulator_interfaces</depend>

  <depend>gz_transport_vendor</depend>
  <depend>gz_msgs_vendor</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_testing</exec_depend>
  <exec_depend>launch_testing_ament_cmake</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>provant_simulator_gz_plugins</exec_depend>
  <exec_depend>provant_simulator_step_command_bridge</exec_depend>
  <exec_depend>provant_simulator_simulation_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
